--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,309 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'poppins',sans-serif;
+    scroll-behavior: smooth;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    background-color: #ededed;
+}
+
+body::-webkit-scrollbar{
+    display: none;
+}
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #121f28;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    z-index: 100;
+}
+
+.header i{
+    display: none;
+}
+
+.logo{
+    font-size: 25px;
+    text-decoration: none;
+    color: white;
+}
+
+ul{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    margin: 3px;
+    color: white;
+}
+
+.responsive{
+    display: none;
+}
+li{
+    margin-inline: 5px;
+    padding: 4px 8px;
+    cursor: pointer;
+}
+
+li:hover{
+    background: white;
+    color: #fd705a;
+    border-radius: 5px;
+}
+
+.container{
+    margin-top: 59px;
+    background-color:  #121f28;
+}
+
+.introction{
+    padding: 30px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.details{
+    padding-top: 30px;
+}
+
+.details >h4{
+    color: #b9b0b0;
+    margin-left: -40px;
+    padding: 5px;
+}
+
+.details >h2 span{
+    color: #fd705a;
+}
+
+.details >h4::before{
+    content: '';
+    display: inline-block;
+    background: #fd705a;
+    width: 40%;
+    height: 3px;
+}
+
+.details >h1,h2{
+    color: #ededed;
+}
+
+.resume{
+    margin-top: 40px;
+}
+
+.resume > :first-child{
+    background-color: #fd705a;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    outline: none;
+    border: 2px solid #fd705a;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.resume > :nth-child(2){
+    background:transparent;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    outline: none;
+    border: 2px solid #fd705a;
+    font-size: 1rem;
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+.image{
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    background-image: url('./assets/person.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.language{
+    background-color: #17242d;
+    color: #25323b;
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 15px;
+}
+
+.about-me{
+    margin-top: 30px;
+    padding: 30px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.devlopment{
+    width: 50vw;
+}
+
+.devlopment >div{
+    color: #b9b0b0;
+    font-size: 20px;
+}
+
+.devlopment > div>i{
+    font-size: 25px;
+    margin: 30px 20px;
+    color: #fd705a;
+}
+
+.me{
+    width: 50vw;
+}
+
+.about >h1{
+    color: white;
+}
+
+.about >p{
+    color: #b9b0b0;
+    padding-block: 20px;
+}
+
+.number{
+    display: flex;
+}
+
+.number > div > h1{
+    color: white;
+}
+
+.number > div >p{
+    width: 50%;
+    color: #b9b0b0;
+}
+
+.num-one::after, .num-three::after{
+    content: ' +';
+    color: #fd705a;
+    width: 40%;
+    height: 3px;
+}
+
+.num-two::after{
+    content: ' %';
+    color: #fd705a;
+    width: 40%;
+    height: 3px;
+}
+
+
+@media (max-width: 480px) {
+    .navbar{
+        display: none;
+    }
+    .header{
+        height: 59px;
+    }
+    .header i{
+        display: block;
+        color: #b9b0b0;
+        font-size: 25px;
+        margin-top: 5px;
+    }
+    .responsive{
+        position: absolute;
+        left: 0;
+        background-color: white;
+        display: none;
+        color: #121f28;
+        text-align: center;
+        padding-top: 30px;
+        width: 100%;
+        margin-top: -20px;
+        height: 100vh;
+    }
+    
+    .close-icon{
+        text-align:end;
+        color: #121f28;
+        cursor: pointer;
+        margin: 20px;
+    }
+    .responsive ul{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .responsive ul li{
+        text-align: center;
+        margin: 5px;
+    }
+
+    .responsive ul li:hover{
+        border: 2px solid #fd705a;
+    }
+    .introction{
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+    }
+    .details{
+        text-align: center;
+    }
+
+    .details > h4::before{
+        display: none;
+    }
+    .details>h4{
+        margin: auto;
+        width: fit-content;
+    }
+    .details >h4::after{
+    content: '';
+    display: block;
+    background: #fd705a;
+    width: 100%;
+    height: 3px;
+    }
+    .image{
+        margin: auto;
+        margin-top: 30px;
+    }
+    .language{
+        padding: 5px;
+        justify-content: space-between;
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+    }
+    .about-me{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        margin-top: 0px;
+    }
+    .devlopment{
+        width: 100%;
+    }
+    .me{
+        width: 100%;
+    }
+    .devlopment >div{
+    font-size: 20px;
+}
+
+.devlopment > div>i{
+    font-size: 20px;
+    margin: 20px 10px;
+}
+    .number > div >p{
+    width: 100%;
+    }
+
 }
