--- a/src/index.css
+++ b/src/index.css
@@ -239,6 +239,7 @@ li:hover{
     .responsive ul{
         display: flex;
         flex-direction: column;
+        padding-inline: 50px;
     }
     
     .responsive ul li{
